-Wpessimizing-move warnings in LocaleICU.cpp https://bugs.webkit.org/show_bug.cgi?id=225205

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-04-29
Reviewed by Sam Weinig.

* platform/text/LocaleICU.cpp:
(WebCore::LocaleICU::createLabelVector):
(WebCore::createFallbackMonthLabels):
(WebCore::createFallbackAMPMLabels):

Canonical link: https://commits.webkit.org/237173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276813 268f45cc-cd09-0410-ab3c-d52691b4dbfc